--- a/index.html
+++ b/index.html
@@ -3,8 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Quiz and Poll App</title>
-  <link rel="stylesheet" href="css/styles.css">
+  <title>Quiz App</title>
   <script defer src="https://www.gstatic.com/firebasejs/9.22.1/firebase-app.js"></script>
   <script defer src="https://www.gstatic.com/firebasejs/9.22.1/firebase-auth.js"></script>
   <script defer src="https://www.gstatic.com/firebasejs/9.22.1/firebase-firestore.js"></script>
@@ -12,7 +11,36 @@
   <script defer src="js/app.js"></script>
 </head>
 <body>
-  <h1>Quiz and Poll App</h1>
+  <h1>Welcome to the Quiz App</h1>
+
+  <!-- Authentication Section -->
+  <div id="auth-section">
+    <h2>Login</h2>
+    <form id="loginForm">
+      <label for="loginEmail">Email:</label>
+      <input type="email" id="loginEmail" required><br>
+      <label for="loginPassword">Password:</label>
+      <input type="password" id="loginPassword" required><br>
+      <button type="submit">Login</button>
+    </form>
+    <h2>Register</h2>
+    <form id="registerForm">
+      <label for="registerEmail">Email:</label>
+      <input type="email" id="registerEmail" required><br>
+      <label for="registerPassword">Password:</label>
+      <input type="password" id="registerPassword" required><br>
+      <button type="submit">Register</button>
+    </form>
+    <button id="logoutButton">Logout</button>
+  </div>
+
+  <!-- Quiz Section -->
+  <div id="quiz-section">
+    <h2>Select a Quiz</h2>
+    <div id="quizList"></div>
+  </div>
+
+  <!-- Display Quiz -->
   <div id="app"></div>
 </body>
 </html>
