--- a/index.html
+++ b/index.html
@@ -1,46 +1,29 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Quiz App</title>
-  <script defer src="https://www.gstatic.com/firebasejs/9.22.1/firebase-app.js"></script>
-  <script defer src="https://www.gstatic.com/firebasejs/9.22.1/firebase-auth.js"></script>
-  <script defer src="https://www.gstatic.com/firebasejs/9.22.1/firebase-firestore.js"></script>
-  <script defer src="js/firebase-config.js"></script>
-  <script defer src="js/app.js"></script>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Quiz & Poll App</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-  <h1>Welcome to the Quiz App</h1>
+    <div id="login-container">
+        <form id="login-form">
+            <input type="email" id="email" placeholder="Email" required>
+            <input type="password" id="password" placeholder="Password" required>
+            <button type="submit">Login</button>
+            <p id="login-status"></p>
+        </form>
+    </div>
 
-  <!-- Authentication Section -->
-  <div id="auth-section">
-    <h2>Login</h2>
-    <form id="loginForm">
-      <label for="loginEmail">Email:</label>
-      <input type="email" id="loginEmail" required><br>
-      <label for="loginPassword">Password:</label>
-      <input type="password" id="loginPassword" required><br>
-      <button type="submit">Login</button>
-    </form>
-    <h2>Register</h2>
-    <form id="registerForm">
-      <label for="registerEmail">Email:</label>
-      <input type="email" id="registerEmail" required><br>
-      <label for="registerPassword">Password:</label>
-      <input type="password" id="registerPassword" required><br>
-      <button type="submit">Register</button>
-    </form>
-    <button id="logoutButton">Logout</button>
-  </div>
+    <div id="quiz-container"></div>
 
-  <!-- Quiz Section -->
-  <div id="quiz-section">
-    <h2>Select a Quiz</h2>
-    <div id="quizList"></div>
-  </div>
+    <div id="polls-container"></div>
 
-  <!-- Display Quiz -->
-  <div id="app"></div>
+    <script src="https://www.gstatic.com/firebasejs/9.6.1/firebase-app.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/9.6.1/firebase-auth.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/9.6.1/firebase-database.js"></script>
+    <script src="firebase-config.js"></script>
+    <script src="script.js"></script>
 </body>
 </html>
