--- a/index.html
+++ b/index.html
@@ -3,27 +3,29 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Quiz & Poll App</title>
-    <link rel="stylesheet" href="style.css">
+    <title>Quiz and Poll App</title>
+    <link rel="stylesheet" href="styles.css">
+    <script type="module" src="app.js" defer></script>
 </head>
 <body>
-    <div id="login-container">
-        <form id="login-form">
-            <input type="email" id="email" placeholder="Email" required>
-            <input type="password" id="password" placeholder="Password" required>
-            <button type="submit">Login</button>
-            <p id="login-status"></p>
-        </form>
-    </div>
+    <header>
+        <h1>Quiz and Poll Application</h1>
+        <button id="loginButton">Login</button>
+        <button id="logoutButton">Logout</button>
+    </header>
 
-    <div id="quiz-container"></div>
+    <main>
+        <section id="quizSection">
+            <h2>Quizzes</h2>
+            <div id="quizList"></div>
+            <button id="addQuizButton">Add Quiz</button>
+        </section>
 
-    <div id="polls-container"></div>
-
-    <script src="https://www.gstatic.com/firebasejs/9.6.1/firebase-app.js"></script>
-    <script src="https://www.gstatic.com/firebasejs/9.6.1/firebase-auth.js"></script>
-    <script src="https://www.gstatic.com/firebasejs/9.6.1/firebase-database.js"></script>
-    <script src="firebase-config.js"></script>
-    <script src="script.js"></script>
+        <section id="pollSection">
+            <h2>Polls</h2>
+            <div id="pollList"></div>
+            <button id="addPollButton">Add Poll</button>
+        </section>
+    </main>
 </body>
 </html>
