--- a/index.html
+++ b/index.html
@@ -9,22 +9,20 @@
 </head>
 <body>
     <header>
-        <h1>Quiz and Poll Application</h1>
+        <h1 id="welcomeMessage"></h1>
         <button id="loginButton">Login</button>
-        <button id="logoutButton">Logout</button>
+        <button id="logoutButton" style="display:none;">Logout</button>
     </header>
 
     <main>
         <section id="quizSection">
             <h2>Quizzes</h2>
             <div id="quizList"></div>
-            <button id="addQuizButton">Add Quiz</button>
         </section>
 
         <section id="pollSection">
             <h2>Polls</h2>
             <div id="pollList"></div>
-            <button id="addPollButton">Add Poll</button>
         </section>
     </main>
 </body>
