--- a/profile.html
+++ b/profile.html
@@ -3,23 +3,18 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>User Profile</title>
+    <title>Ind Edu - Profile</title>
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
     <div id="auth-section">
-        <h2>Sign In</h2>
-        <input type="email" id="email" placeholder="Email">
-        <input type="password" id="password" placeholder="Password">
         <button id="sign-in">Sign In</button>
-        <h2>Sign Up</h2>
         <button id="sign-up">Sign Up</button>
     </div>
 
     <div id="user-info" style="display:none;">
         <div id="username-display"></div>
         <button id="sign-out">Sign Out</button>
-        <button id="view-polls">View Polls</button>
     </div>
 
     <script type="module" src="app.js"></script>
