--- a/index.html
+++ b/index.html
@@ -7,28 +7,29 @@
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    <div id="auth-section">
-        <h1>Ind Edu</h1>
-        <button id="sign-in">Sign In</button>
-        <button id="sign-up">Sign Up</button>
-        <button id="view-profile">View Profile</button>
-    </div>
+    <header>
+        <h1>Ind Edu - Quiz App</h1>
+        <nav>
+            <button id="sign-in">Sign In</button>
+            <button id="sign-up">Sign Up</button>
+            <button id="view-profile">Profile</button>
+            <button id="settings">Settings</button>
+            <button id="sign-out" style="display:none;">Sign Out</button>
+        </nav>
+    </header>
 
-    <div id="user-info" style="display:none;">
-        <div id="username-display"></div>
-        <button id="sign-out">Sign Out</button>
-    </div>
+    <main>
+        <section id="poll-form" style="display:none;">
+            <h2>Create a Poll</h2>
+            <input type="text" id="poll-question" placeholder="Poll Question">
+            <textarea id="poll-options" placeholder="Options (comma separated)"></textarea>
+            <button id="submit-poll">Submit Poll</button>
+        </section>
 
-    <div id="poll-form" style="display:none;">
-        <h2>Create a Poll</h2>
-        <input type="text" id="poll-question" placeholder="Poll Question">
-        <textarea id="poll-options" placeholder="Options (comma separated)"></textarea>
-        <button id="submit-poll">Submit Poll</button>
-    </div>
-
-    <div id="poll-list">
-        <!-- Polls will be displayed here -->
-    </div>
+        <section id="poll-list">
+            <!-- Polls will be displayed here -->
+        </section>
+    </main>
 
     <script type="module" src="app.js"></script>
 </body>
