--- a/profile.html
+++ b/profile.html
@@ -7,15 +7,18 @@
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    <div id="auth-section">
-        <button id="sign-in">Sign In</button>
-        <button id="sign-up">Sign Up</button>
-    </div>
+    <header>
+        <h1>Profile</h1>
+        <nav>
+            <button id="sign-out">Sign Out</button>
+        </nav>
+    </header>
 
-    <div id="user-info" style="display:none;">
-        <div id="username-display"></div>
-        <button id="sign-out">Sign Out</button>
-    </div>
+    <main>
+        <section id="user-info">
+            <div id="username-display"></div>
+        </section>
+    </main>
 
     <script type="module" src="app.js"></script>
 </body>
