--- a/settings.html
+++ b/settings.html
@@ -7,21 +7,26 @@
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    <div id="settings">
-        <h2>Settings</h2>
-        <label for="theme-select">Select Theme:</label>
-        <select id="theme-select">
-            <option value="light">Light</option>
-            <option value="dark">Dark</option>
-        </select>
+    <header>
+        <h1>Settings</h1>
+    </header>
 
-        <label for="font-size">Select Font Size:</label>
-        <select id="font-size">
-            <option value="small">Small</option>
-            <option value="medium" selected>Medium</option>
-            <option value="large">Large</option>
-        </select>
-    </div>
+    <main>
+        <section id="settings">
+            <label for="theme-select">Select Theme:</label>
+            <select id="theme-select">
+                <option value="light">Light</option>
+                <option value="dark">Dark</option>
+            </select>
+
+            <label for="font-size">Select Font Size:</label>
+            <select id="font-size">
+                <option value="small">Small</option>
+                <option value="medium" selected>Medium</option>
+                <option value="large">Large</option>
+            </select>
+        </section>
+    </main>
 
     <script type="module" src="app.js"></script>
 </body>
