--- a/profile.html
+++ b/profile.html
@@ -1,25 +1,24 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Ind Edu - Profile</title>
-    <link rel="stylesheet" href="styles.css">
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Profile</title>
+  <link rel="stylesheet" href="styles.css">
+  <script type="module" src="app.js" defer></script>
 </head>
 <body>
-    <header>
-        <h1>Profile</h1>
-        <nav>
-            <button id="sign-out">Sign Out</button>
-        </nav>
-    </header>
-
-    <main>
-        <section id="user-info">
-            <div id="username-display"></div>
-        </section>
-    </main>
-
-    <script type="module" src="app.js"></script>
+  <header>
+    <h1>Profile</h1>
+    <nav>
+      <a href="index.html">Home</a>
+      <a href="settings.html">Settings</a>
+      <a href="profile.html" id="sign-out">Sign Out</a>
+    </nav>
+  </header>
+  <div class="container">
+    <h2>Welcome to your profile!</h2>
+    <p>Manage your settings here.</p>
+  </div>
 </body>
 </html>
