--- a/index.html
+++ b/index.html
@@ -3,24 +3,22 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Poll Sharing Website</title>
+    <title>Create Poll</title>
     <link rel="stylesheet" href="styles.css">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
     <script type="module" src="scripts.js" defer></script>
 </head>
 <body>
     <header>
-        <img src="logo.png" alt="IND EDU Logo" id="logo">
-        <h1>Ind Edu</h1>
+        <h1>Create a Poll</h1>
         <nav>
-            <a href="profile.html" id="profile-link">Profile</a>
-            <a href="settings.html" id="settings-link">Settings</a>
-            <button id="sign-out" style="display: none;">Sign Out</button>
+            <a href="profile.html">Profile</a>
+            <a href="settings.html">Settings</a>
+            <button id="sign-out">Sign Out</button>
         </nav>
     </header>
     <main>
-        <section id="poll-form" style="display: none;">
-            <h2>Create a Poll</h2>
+        <section id="poll-form">
+            <h2>Share a Poll</h2>
             <input type="text" id="poll-question" placeholder="Poll Question" />
             <div id="poll-options">
                 <input type="text" class="poll-option" placeholder="Option 1" />
@@ -29,9 +27,9 @@
             <button id="add-option">Add Option</button>
             <button id="submit-poll">Submit Poll</button>
         </section>
-        <section id="polls">
+        <section id="poll-list">
             <h2>Polls</h2>
-            <div id="poll-list"></div>
+            <!-- Polls will be dynamically inserted here -->
         </section>
     </main>
 </body>
