--- a/index.html
+++ b/index.html
@@ -3,13 +3,13 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Create Poll</title>
+    <title>Polls</title>
     <link rel="stylesheet" href="styles.css">
     <script type="module" src="scripts.js" defer></script>
 </head>
 <body>
     <header>
-        <h1>Create a Poll</h1>
+        <h1>Polls</h1>
         <nav>
             <a href="profile.html">Profile</a>
             <a href="settings.html">Settings</a>
@@ -18,7 +18,7 @@
     </header>
     <main>
         <section id="poll-form">
-            <h2>Share a Poll</h2>
+            <h2>Create a Poll</h2>
             <input type="text" id="poll-question" placeholder="Poll Question" />
             <div id="poll-options">
                 <input type="text" class="poll-option" placeholder="Option 1" />
