--- a/profile.html
+++ b/profile.html
@@ -5,11 +5,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Profile</title>
     <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
     <script type="module" src="scripts.js" defer></script>
 </head>
 <body>
     <header>
-        <a href="index.html">Back to Home</a>
+        <img src="logo.png" alt="IND EDU Logo" id="logo">
+        <h1>Profile</h1>
+        <button id="sign-out">Sign Out</button>
     </header>
     <main>
         <section id="auth-section">
@@ -21,8 +24,7 @@
         </section>
         <section id="user-info" style="display: none;">
             <h2>Welcome, <span id="username-display"></span></h2>
-            <button id="sign-out">Sign Out</button>
-            <button id="view-posts">View Polls</button>
+            <button id="view-posts">View Posts</button>
         </section>
     </main>
 </body>
