--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 </head>
 <body>
     <header>
-        <img src="logo.png" alt="IND EDU Logo" id="logo">
+        <img src="logo.png" alt="Logo" id="logo">
         <h1>Ind Edu</h1>
         <nav>
             <a href="profile.html" id="profile-link">Profile</a>
