--- a/index.html
+++ b/index.html
@@ -3,32 +3,26 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Post Sharing Website</title>
+    <title>Quiz App</title>
     <link rel="stylesheet" href="styles.css">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
-    <script type="module" src="scripts.js" defer></script>
 </head>
 <body>
     <header>
-        <img src="logo.png" alt="Logo" id="logo">
-        <h1>Ind Edu</h1>
+        <h1>Quiz App</h1>
         <nav>
-            <a href="profile.html" id="profile-link">Profile</a>
-            <a href="settings.html" id="settings-link">Settings</a>
-            <button id="sign-out" style="display: none;">Sign Out</button>
+            <a href="admin.html" id="admin-link" style="display: none;">Admin Dashboard</a>
+            <button id="sign-out">Sign Out</button>
         </nav>
     </header>
     <main>
-        <section id="post-form" style="display: none;">
-            <h2>Share a Post</h2>
-            <input type="text" id="display-name" placeholder="Display Name" />
-            <textarea id="post-content" placeholder="Write your post here..."></textarea>
-            <button id="submit-post">Post</button>
-        </section>
-        <section id="posts">
-            <h2>Posts</h2>
-            <div id="post-list"></div>
+        <section id="quiz-list">
+            <h2>Available Quizzes</h2>
+            <div id="quizzes"></div>
         </section>
     </main>
+    <script src="https://www.gstatic.com/firebasejs/9.22.2/firebase-app.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/9.22.2/firebase-firestore.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/9.22.2/firebase-auth.js"></script>
+    <script src="scripts.js" type="module"></script>
 </body>
 </html>
